Fix Checkbox spacing

--- a/components/Checkbox/Checkbox.module.css
+++ b/components/Checkbox/Checkbox.module.css
@@ -1,5 +1,5 @@
 .base {
-  margin: 0.5rem 0 1rem 0;
+  padding: 0.5rem 0 1rem 0;
 }
 
 .inputBase {
